--- a/ErrorHandling/MyServer.WithSLR/App.config
+++ b/ErrorHandling/MyServer.WithSLR/App.config
@@ -1,27 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="TransportConfig" type="NServiceBus.Config.TransportConfig, NServiceBus.Core" />
-    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
-    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
-    <section name="Logging" type="NServiceBus.Config.Logging, NServiceBus.Core" />
-    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
+    <section name="TransportConfig" type="NServiceBus.Config.TransportConfig, NServiceBus.Core"/>
+    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core"/>
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core"/>
+    <section name="Logging" type="NServiceBus.Config.Logging, NServiceBus.Core"/>
+    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core"/>
     <!-- Uncomment this section if you would like to configure SecondLevelRetries
     <section name="SecondLevelRetriesConfig" type="NServiceBus.Config.SecondLevelRetriesConfig, NServiceBus.Core"/>
     -->
   </configSections>
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
+  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
   <!--Audit Configuration has been moved from UnicastBusConfig to AuditConfig. 
   <AuditConfig QueueName="The address to which messages received will be forwarded."
     OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  /> -->
-  <AuditConfig QueueName="audit" />
-  <TransportConfig MaximumConcurrencyLevel="30" MaxRetries="2" />
+  <AuditConfig QueueName="audit"/>
+  <TransportConfig MaximumConcurrencyLevel="30" MaxRetries="2"/>
   <UnicastBusConfig>
     <MessageEndpointMappings>
-      <add Messages="MyServer.Common" Endpoint="MyServerWithSLR" />
+      <add Messages="MyServer.Common" Endpoint="MyServerWithSLR"/>
     </MessageEndpointMappings>
   </UnicastBusConfig>
-  <Logging Threshold="WARN" />
+  <Logging Threshold="WARN"/>
   <!-- You can configure the time, in seconds, that the time span between retries should increase 
        And the number of second level retries.
   <SecondLevelRetriesConfig Enabled="true" TimeIncrease="00:00:04" NumberOfRetries="3" />
@@ -29,13 +29,13 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="NServiceBus" publicKeyToken="9fc386479f8a226c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
+        <assemblyIdentity name="NServiceBus" publicKeyToken="9fc386479f8a226c" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
+        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
