--- a/FullDuplex/MyClient/App.config
+++ b/FullDuplex/MyClient/App.config
@@ -1,22 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
-    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
-    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core"/>
+    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core"/>
+    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core"/>
   </configSections>
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
-  <AuditConfig QueueName="audit" />
+  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
+  <AuditConfig QueueName="audit"/>
   <UnicastBusConfig>
     <MessageEndpointMappings>
-      <add Messages="MyMessages" Endpoint="MyServer" />
+      <add Messages="MyMessages" Endpoint="MyServer"/>
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
+        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
