--- a/ScaleOut/Orders.Handler/App.config
+++ b/ScaleOut/Orders.Handler/App.config
@@ -1,21 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
-    <section name="TransportConfig" type="NServiceBus.Config.TransportConfig, NServiceBus.Core" />
-    <section name="GatewayConfig" type="NServiceBus.Config.GatewayConfig, NServiceBus.Core" />
-    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
-    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
+    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core"/>
+    <section name="TransportConfig" type="NServiceBus.Config.TransportConfig, NServiceBus.Core"/>
+    <section name="GatewayConfig" type="NServiceBus.Config.GatewayConfig, NServiceBus.Core"/>
+    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core"/>
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core"/>
   </configSections>
   <!--Audit Configuration has been moved from UnicastBusConfig to AuditConfig. 
   <AuditConfig QueueName="The address to which messages received will be forwarded."
     OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  /> -->
-  <AuditConfig QueueName="audit" />
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
-  <TransportConfig MaximumConcurrencyLevel="7" MaxRetries="2" />
+  <AuditConfig QueueName="audit"/>
+  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
+  <TransportConfig MaximumConcurrencyLevel="7" MaxRetries="2"/>
   <GatewayConfig>
     <Channels>
-      <Channel Address="http://localhost:25899/" ChannelType="Http" Default="true" />
+      <Channel Address="http://localhost:25899/" ChannelType="Http" Default="true"/>
     </Channels>
   </GatewayConfig>
   <!--<UnicastBusConfig 
@@ -34,14 +34,14 @@
     </MessageEndpointMappings>
   </UnicastBusConfig>-->
   <UnicastBusConfig>
-    <MessageEndpointMappings />
+    <MessageEndpointMappings/>
   </UnicastBusConfig>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
+        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
